# StrokeDetection

./: CMakeLists.txt  LICENSE  StrokeClassification.ipynb
StrokeDetection/: CMakeLists.txt
StrokeDetection/StrokeDetectionModule/: CMakeLists.txt  StrokeDetectionModule.py
StrokeDetection/StrokeDetectionModule/Resources/UI/: StrokeDetectionModule.ui
StrokeDetectionModule/: CMakeLists.txt  StrokeDetectionModule.py
StrokeDetectionModule/Resources/Models/: segmenter.pt
StrokeDetectionModule/Resources/UI/: StrokeDetectionModule.ui
